--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "danger-plugin-eslint",
+  "name": "@oeph/danger-plugin-eslint",
   "description": "Eslint your code with Danger",
   "author": {
-    "name": "Dan Palmer",
-    "email": "dan@danpalmer.me"
+    "name": "Philipp Oehme",
+    "email": "me@philippoeh.me"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/danpalmer/danger-plugin-eslint.git"
+    "url": "https://github.com/oeph/danger-plugin-eslint.git"
   },
   "bugs": {
-    "url": "https://github.com/danpalmer/danger-plugin-eslint/issues"
+    "url": "https://github.com/oeph/danger-plugin-eslint/issues"
   },
-  "homepage": "https://github.com/danpalmer/danger-plugin-eslint#readme",
-  "keywords": ["danger", "danger-plugin", "eslint"],
+  "homepage": "https://github.com/oeph/danger-plugin-eslint#readme",
+  "keywords": [
+    "danger",
+    "danger-plugin",
+    "eslint"
+  ],
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -28,8 +32,7 @@
     "prepublish": "npm run build",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "prettier": "prettier",
-    "prettier-write":
-      "npm run prettier -- --parser typescript --no-semi --trailing-comma es5 --write --print-width 120",
+    "prettier-write": "npm run prettier -- --parser typescript --no-semi --trailing-comma es5 --write --print-width 120",
     "prettier-project": "npm run prettier-write -- 'src/**/*.{ts,tsx}'",
     "lint": "tslint \"src/**/*.ts\""
   },
@@ -61,15 +64,27 @@
     }
   },
   "lint-staged": {
-    "*.@(ts|tsx)": ["tslint --fix", "npm run prettier-write --", "git add"]
+    "*.@(ts|tsx)": [
+      "tslint --fix",
+      "npm run prettier-write --",
+      "git add"
+    ]
   },
   "jest": {
-    "moduleFileExtensions": ["ts", "tsx", "js", "json"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
     "transform": {
       ".(ts|tsx|js|json)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "(.test)\\.(ts|tsx)$",
-    "testPathIgnorePatterns": ["\\.snap$", "<rootDir>/node_modules/"]
+    "testPathIgnorePatterns": [
+      "\\.snap$",
+      "<rootDir>/node_modules/"
+    ]
   },
   "dependencies": {
     "eslint": "^4.12.1"
