--- a/package.json
+++ b/package.json
@@ -84,7 +84,9 @@
     ]
   },
   "dependencies": {
-    "eslint": "^4.12.1",
     "esdoc": "^0.5.2"
+  },
+  "peerDependencies": {
+    "eslint": "^6.8.0"
   }
 }
